# ember

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  Makefile  README.md  pyproject.toml  test_tensor
cpp_tests/: CMakeLists.txt  test_tensor_data.cpp
docs/: conf.py  index.rst  modules.rst
ember/: __init__.py  _core.pyi  _core_operators.pyi  autodiff.py  main.py  operators.py  scalar.py  scalar_functions.py  testing.py
ember/nn/: __init__.py  linear.py  module.py
ember/optim/: sgd.py
ember/optimizers/: sgd.py
include/: myclass.h  operators.h  scalar.h
include/ember/tensor/: tensor_data.h  tensor_ops.h
include/tensor/: tensor_data.h
project/: run_scalar.py
python/: __init__.py  demo.py  main.py
src/: bindings.cpp  myclass.cpp  operators_bindings.cpp  scalar.cpp
src/tensor/: main.cpp  tensor_data.cpp  tensor_ops.cpp
tests/: strategies.py  test_autodiff.py  test_module.py  test_operators.py  test_scalar.py
